# AndroidBoilerplate

./: .gitignore  LICENSE.txt  README.md  gradle.properties  settings.gradle
app/: app_keystore.jks  build.gradle
app/src/androidTest/java/com/bbt2000/androidboilerplate/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/bbt2000/boilerplate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  profile_432x432_NV12  profile_432x432_VYUY
app/src/main/assets/: wy_300x200_VYUY  yuviewer.yuvplaylist
app/src/main/assets/shader/: f_color.glsl  f_oes.glsl  f_rgb2nv12_uv.glsl  f_rgb2nv12_y.glsl  f_rgb2vyuy.glsl  f_rgb2yuv_uv.glsl  f_rgb2yuv_y.glsl  f_rgb2yuvy.glsl  f_shader_oes.glsl  f_tex.glsl  f_tex_flip.glsl  f_yuv2rgb.glsl  v_3d.glsl  v_3d_color.glsl  v_simple.glsl  v_simple_m.glsl  v_simple_m_flip.glsl
app/src/main/cpp/: CMakeLists.txt  NativeRenderer.cpp  NativeRenderer_Jni.cpp  hello_jni.cpp
app/src/main/cpp/courses/01_egl/: CMakeLists.txt  egl.cpp  native_window.cpp
app/src/main/cpp/courses/01_glsurfaceview_egl/: CMakeLists.txt  drawSurfaceWithoutEGL.cpp  drawWithNativeEGL.cpp
app/src/main/cpp/courses/01_triangle/: 01_triangle.cpp  01_triangle.h  CMakeLists.txt  NativeRenderer.cpp  NativeRenderer_Jni.cpp
app/src/main/cpp/courses/01_triangle_single_file/: CMakeLists.txt  triangle_jni.cpp
app/src/main/cpp/courses/02_gl_api/: CMakeLists.txt  practice.cpp  shader.glsl  shader.h
app/src/main/cpp/courses/02_native_egl_triangle/: CMakeLists.txt  shader.h  triangle.cpp
app/src/main/cpp/courses/02_triangle_egl/: CMakeLists.txt  triangle_egl.cpp  triangle_egl.cpp.bak
app/src/main/cpp/courses/03_camera/: camera.cpp
app/src/main/cpp/courses/03_texture/: CMakeLists.txt  shader.glsl  shader.h  texture.cpp
app/src/main/cpp/courses/04_camera/: CMakeLists.txt
app/src/main/cpp/courses/04_yuv/: CMakeLists.txt  shader.glsl  shader.h  yuv.cpp
app/src/main/cpp/courses/05_camera/: GLContext.h  GLRenderer.cpp  GLRenderer.h  gl_render.cpp  gl_renderer.cpp  shader.glsl  shader.h
app/src/main/cpp/ffmpeg/: CMakeLists.txt  jni.cpp
app/src/main/cpp/ffmpeg/common/: FFContext.cpp  FFContext.h  gl.cpp  gl.h
app/src/main/cpp/ffmpeg/compat/: CMakeLists.txt
app/src/main/cpp/ffmpeg/fftools/: CMakeLists.txt  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_demux.c  ffmpeg_enc.c  ffmpeg_filter.c  ffmpeg_mux_init.c  ffmpeg_opt.c
app/src/main/cpp/ffmpeg/include/: android_log.h  log_callback.h
app/src/main/cpp/ffmpeg/include/libavutil/: frame.h
app/src/main/cpp/ffmpeg/libpostproc/: CMakeLists.txt
app/src/main/cpp/ffmpeg/rtsp/: gl.cpp  gl.h  stream.cpp  stream.h
app/src/main/cpp/hid/: CMakeLists.txt  hid.cpp  hid.h  jni.cpp
app/src/main/cpp/hid/common/: LibusbWrapper.cpp  LibusbWrapper.h
app/src/main/cpp/hid/libusb/: CMakeLists.txt  libusbi.h
app/src/main/cpp/hid/libusb/os/: events_posix.c  linux_netlink.c  linux_usbfs.c  threads_posix.c
app/src/main/cpp/include/: BaseArt.h  EglUtil.h  GLContext.h  GlUtil.h  JniUtil.h  LogUtil.h  NativeRenderer.h  ShaderUtil.h  android_log.h  egl_util.h  gl_util.h  log_util.h  matrix.h  shader_util.h
app/src/main/cpp/include/gl/: GLContext.h  gl_util.h
app/src/main/cpp/lua-test/: CMakeLists.txt  lua-test.cpp  lua-test.h
app/src/main/cpp/lua-test/lua-5.4.6/: CMakeLists.txt
app/src/main/cpp/opengl/: CMakeLists.txt
app/src/main/cpp/opengl/01_basic/: 01_native_window.cpp  01_native_window.h  03_vbo.cpp  03_vbo.h  04_ebo.cpp  04_ebo.h  05_vao.cpp  05_vao.h  06_vao_vbo_ebo.cpp  06_vao_vbo_ebo.h  07_texture.cpp  07_texture.h  08_yuv.cpp  08_yuv.h  08_yuv2.cpp  08_yuv2.h  09_fbo.cpp  09_fbo.h  10_rgb2nv12.cpp  10_rgb2nv12.h  10_rgb2vyuy.cpp  10_rgb2vyuy.h  CMakeLists.txt  jni.cpp
app/src/main/cpp/opengl/01_basic/include/: egl_util.h
app/src/main/cpp/opengl/01_basics/: 01_native_window.h  02_egl.h  03_vbo.h  04_ebo.h  05_vao.h  06_vao_vbo_ebo.h  07_texture.h  08_yuv.h  08_yuv2.h  09_fbo.h  10_rgb2vyuy.h  10_rgb2yuv.h  10_rgb2yuvy.h  CMakeLists.txt  _entry.cpp  test.cpp
app/src/main/cpp/opengl/01_basics/shader/: shader_tex.h
app/src/main/cpp/opengl/02_3d/: 01_tex_3d.cpp  01_tex_3d.h  02_render_cube.cpp  02_render_cube.h  CMakeLists.txt  jni.cpp
app/src/main/cpp/opengl/02_3d/include/: vertices.h
app/src/main/cpp/opengl/02_camera/: CMakeLists.txt  GLContext.h  gl_render.cpp  shader.glsl  shader.h
app/src/main/cpp/opengl/include/: AssetUtil.h  GLContext.h  GlUtil.h  LogUtil.h
app/src/main/cpp/opengl/jni/: CMakeLists.txt  jni.cpp
app/src/main/cpp/samples/01_triangle/: 01_triangle.cpp  01_triangle.h  GlRenderContext.cpp  GlRenderContext.h  gl_util.cpp  native_render_jni.cpp  native_render_jni.h
app/src/main/cpp/samples/02_xxx/: GlRenderContext.cpp  gl_util.h  native_render_jni.cpp
app/src/main/cpp/util/: GlUtil.cpp
app/src/main/java/com/bbt2000/androidboilerplate/: MainActivity.kt
app/src/main/java/com/bbt2000/boilerplate/: BpApplication.kt  MainActivity.kt  MyApplication.kt
app/src/main/res/anim/: view_anim_alpha.xml  view_anim_scale.xml  view_anim_set.xml  view_anim_translate.xml
app/src/main/res/animator/: property_animator_roty.xml  property_animator_set.xml
app/src/main/res/layout/: activity_anim.xml  activity_builder.xml  activity_camera.xml  activity_camera_oes.xml  activity_custom_view.xml  activity_db.xml  activity_first.xml  activity_frag.xml  activity_name.xml  activity_property_anim.xml  activity_test.xml  activity_test_service.xml  activity_transition1.xml  activity_transition2.xml  activity_vb.xml  activity_view_compose.xml  fragment_test.xml  fragment_vb.xml  fragment_view_compose.xml  layout_surfaceviewgl.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/bbt2000/androidboilerplate/: ExampleUnitTest.kt
app/src/test/java/com/bbt2000/boilerplate/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib-usb/: build.gradle
lib-usb/src/androidTest/java/com/bbt2000/libusb/: ExampleInstrumentedTest.kt
lib-usb/src/main/cpp/: CMakeLists.txt  libusb.cpp
nativelib/: build.gradle
nativelib/src/main/cpp/: nativelib.cpp
(+221 files in other folders)
